# the-anvils

./: .env.worker.example  .importlinter  AGENTS.md  CHANGELOG.md  Dockerfile  Dockerfile.funnel  MISSION_HANDOFF.md  PYPI_RELEASE_NOTES.md  README.md  docker-compose.control-plane.yml  docker-compose.demo.yml  docker-compose.funnel-stable.yml  docker-compose.worker.yml  pyproject.toml  workshop-demo.sh
.github/workflows/: big-pickle-health.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP-ANALYSIS.md  ROADMAP.md  STATE.md
.planning/phases/01-operator-pause-parity/: 01-01-PLAN.md  01-01-SUMMARY.md
.planning/phases/02-shared-review-decision-path/: 02-01-PLAN.md  02-01-SUMMARY.md
.planning/phases/03-wui-state-preserving-refresh/: 03-01-PLAN.md  03-01-SUMMARY.md
.planning/phases/04-compact-operator-identity-panel/: 04-01-PLAN.md  04-01-SUMMARY.md
.planning/phases/05-mobile-wui-row-actions/: 05-CONTEXT.md
.planning/phases/05-shared-operator-table-contract/: 05-01-SUMMARY.md  05-CONTEXT.md  05-UI-SPEC.md
.planning/phases/06-mobile-wui-row-actions/: 06-01-PLAN.md  06-CONTEXT.md
.planning/phases/07-review-action-affordances/: 07-01-PLAN.md  07-UI-SPEC.md
docs/: CODEX-MISSION.md  Cert-Renewal.md  Current-vs-Target.md  Deploy-M2.md  Distributed-Setup.md  Getting-Started.md  GitHub-Projects-Status-Workflow.md  Project-Config.md  Project-Description.md  Token-Rotation.md  Whilly-Usage.md  Whilly-Workstation-Bootstrap.md  Whilly-v4-Migration-from-v3.md  Workspace-Topology.md  index.md
docs/distributed-audit/: readiness-validation.md  research-findings.md
docs/superpowers/plans/: 2026-05-07-doc-pack-alignment-roadmap.md  2026-05-08-compact-operator-identity-panel.md  2026-05-08-shared-review-decision-service.md  2026-05-08-wui-state-preserving-refresh.md
docs/superpowers/reviews/: 2026-05-08-whilly-operator-ui-review.md
docs/superpowers/specs/: 2026-05-08-global-worker-pause-resume-design.md
docs/workshop/: CI-BOT.md  DEMO-SCRIPT.md
docs/workshop/adr/: ADR-022-tunneling-tool-for-cross-host-workers.md
scripts/: m2_cross_host_demo.sh  v6-baseline-vps-doctor.sh  v6-baseline-vps-down.sh  v6-baseline-vps-up.sh
scripts/funnel/: run.sh
tests/: conftest.py  test_github_projects.py
tests/fixtures/v6_baseline/: .gitignore
tests/integration/: test_admin_auth_e2e.py  test_alembic_011.py  test_alembic_012_pull_requests.py  test_alembic_full_chain.py  test_bootstrap_tokens.py  test_compose_default_image_tag.py  test_control_state_admin_api.py  test_cross_auth_m1_to_m2_bearer_continuity.py  test_dashboard_sse_event_names.py  test_funnel_stable_url.py  test_health.py  test_health_listener_connected_flip.py  test_htmx_dashboard.py  test_metrics.py  test_migration_010_funnel_url.py  test_phase1_smoke.py  test_phase6_cross_host_compose.py  test_pr_event_types_round_trip.py  test_pr_events_concurrent_ordering.py  test_pr_feedback_poller.py  test_pr_iterate_completion_event.py  test_pr_iterate_followup.py  test_pr_sink_profile.py  test_shell_deny_event_emission.py  test_tasks_api.py  test_testcontainer_connection_smoke.py  test_transport_tasks.py  test_v6_baseline_fixtures.py  test_v6_baseline_funnel_paid_plan.py  test_v6_baseline_vps_scripts.py  test_v6_funnel_resilience.py  test_workshop_demo_propagates_failure_rc.sh
tests/unit/: test_big_pickle_availability.py  test_cli_operator_commands.py  test_cli_run.py  test_compliance_report.py  test_configured_sinks.py  test_conftest_atexit_pg_release.py  test_control_state_repository.py  test_docs_bash_blocks_parse.py  test_docs_python_version_callout.py  test_funnel_url_parser.py  test_github_projects_cli.py  test_human_review_checkpoint.py  test_human_review_decisions.py  test_local_worker.py  test_m1_readiness_baseline.py  test_metrics_refresh_label_staleness.py  test_operator_views.py  test_pipeline_events.py  test_pr_feedback_argv_shape.py  test_pr_feedback_failure_handling.py  test_pr_hook_failure_events.py  test_pr_iterate_cap.py  test_pr_iterate_sanitization.py  test_project_config.py  test_readme_v461_quickstart.py  test_remote_client.py  test_remote_worker.py  test_shell_deny.py  test_task_id_validation.py  test_tmux_runner_quoting.py  test_transport_server.py  test_tui.py  test_verification_runner.py  test_verifier_hardening.py
whilly/: __init__.py  github_projects.py  operator_views.py  task_manager.py  tmux_runner.py  verifier.py
whilly/adapters/db/: repository.py  schema.sql
whilly/adapters/db/migrations/versions/: 010_funnel_url.py  011_events_notify_trigger.py  012_pull_requests_and_pr_events.py
whilly/adapters/filesystem/: plan_io.py
whilly/adapters/transport/: auth.py  client.py  server.py
whilly/api/: dashboard.py  metrics.py  tasks_api.py
whilly/api/templates/: _tasks_table.html  _workers_table.html  dashboard.html  index.html.j2
whilly/cli/: __init__.py  compliance.py  github_projects.py  run.py  tui.py  worker.py
whilly/compliance/: __init__.py
whilly/core/: agent_runner.py  task_id.py
whilly/pipeline/: __init__.py  events.py  human_review.py  human_review_decisions.py  sinks.py  verification.py
whilly/project_config/: loader.py  models.py  plan_builder.py  presets.py
whilly/sinks/: post_complete_pr_hook.py
whilly/sources/: github_pr_feedback.py
whilly/worker/: __init__.py  funnel.py  local.py  main.py  remote.py
whilly/workflow/: pr_iterate.py
whilly_worker/: pyproject.toml
